--- a/css/responsive.css
+++ b/css/responsive.css
@@ -53,6 +53,10 @@
     grid-template-columns: 1fr;
     text-align: center;
   }
+  
+  .social-links {
+    justify-content: center;
+  }
 
   .footer-col h3::after {
     left: 50%;
